chore: move sample to outer file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   </head>
 
   <body>
-    <my-counter start="50"></my-counter>
+    <!-- <my-counter start="50"></my-counter> -->
   </body>
 </html>
