--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
 
-    <title>Three.js</title>
+    <title>reLift-HTML</title>
 
     <link rel="stylesheet" href="./index.css" />
 
