feat: add if-else sample

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
   </head>
 
   <body>
+    <!-- Counter sample -->
     <!-- <my-counter start="50"></my-counter> -->
+
+    <!-- If Else sample -->
+    <div id="if-else">
+      Hello I'm inline and counting: {this.count}
+
+      <span r-if="this.count % 2 === 0">This Even</span>
+      <span r-else>This Odd</span>
+    </div>
   </body>
 </html>
